--- a/src/sass/layouts/_header.scss
+++ b/src/sass/layouts/_header.scss
@@ -20,9 +20,48 @@ header {
       width: 100%;
     }
   }
+
+  @include var.breakpoint(1698px) {
+    margin-left: 2.5rem;
+  }
+
+  @include var.breakpoint(1436px) {
+    margin-left: 1.5rem;
+    margin-right: 0.8rem;
+  }
+
+  @include var.breakpoint(1409px) {
+    .logo-link {
+      width: 200px;
+      height: 77px;
+    }
+  }
+
+  @include var.breakpoint(tablet) {
+    display: grid;
+    grid-template-columns: 0.3fr 1fr 0.2fr;
+    gap: 1.5rem;
+    place-items: center;
+    margin-left: 0;
+    margin-right: 1.4rem;
+
+    .logo-link {
+      width: 100%;
+      height: 100%;
+      justify-self: start;
+    }
+  }
+
+  @include var.breakpoint(1000px) {
+    grid-template-columns: 0.6fr 1fr 0.4fr;
+  }
+
+  @include var.breakpoint(650px) {
+    grid-template-columns: 0.8fr 1fr 0.6fr;
+  }
 }
 
-#menu-menu-principal {
+#menu-menu-principal-1 {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -38,6 +77,14 @@ header {
       color: black;
     }
   }
+
+  @include var.breakpoint(1617px) {
+    gap: 1.5rem;
+  }
+
+  @include var.breakpoint(tablet) {
+    display: none;
+  }
 }
 
 .rs {
@@ -45,6 +92,10 @@ header {
   justify-content: center;
   align-items: center;
   gap: 1.8rem;
+
+  @include var.breakpoint(1436px) {
+    gap: 0.8rem;
+  }
 
   .external-link {
     background: black;
@@ -63,6 +114,19 @@ header {
     span {
       @include var.fontSize(1.4rem);
       font-weight: 300;
+    }
+
+    @include var.breakpoint(1409px) {
+      padding: 1.6rem 1.2rem;
+    }
+  }
+
+  @include var.breakpoint(tablet) {
+    grid-column: 3;
+    grid-row: 1;
+
+    .external-link {
+      display: none;
     }
   }
 }
@@ -93,6 +157,14 @@ header {
   p {
     @include var.fontSize(1.7rem);
     text-align: center;
+  }
+}
+
+.newsletter-container {
+  @include var.breakpoint(tablet) {
+    #newsletter-toggle {
+      display: none;
+    }
   }
 }
 
@@ -138,5 +210,125 @@ header {
     top: 7%;
     right: 1%;
     cursor: pointer;
+  }
+}
+
+.responsive-menu {
+  display: none;
+  @include var.breakpoint(tablet) {
+    display: flow-root;
+    grid-column: 2;
+    grid-row: 1;
+
+    #burger {
+      background: transparent;
+      border: 1px solid var.$blue;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      gap: 0.3rem;
+      width: 45px;
+      height: 45px;
+      border-radius: 50%;
+
+      span {
+        width: 25px;
+        height: 3px;
+        border-radius: 50px;
+        background: var.$blue;
+      }
+    }
+
+    #responsive-menu-container {
+      transform: translateX(-100%);
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 55vw;
+      height: 100vh;
+      z-index: 110;
+      background: white;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: start;
+      transition: 0.3s ease-in-out;
+      padding-block: 4rem;
+
+      &.open {
+        transform: translateX(0);
+      }
+
+      @include var.breakpoint(1000px) {
+        width: 65vw;
+      }
+    }
+
+    .responsive-container {
+      position: relative;
+      display: flex;
+      flex-direction: column;
+      justify-content: start;
+      align-items: center;
+      gap: 2rem;
+      width: 100%;
+      height: 100%;
+
+      .rs.responsive-rs {
+        display: flex;
+        flex-direction: column;
+        gap: 3rem;
+
+        .external-link {
+          display: flex;
+        }
+      }
+
+      #newsletter-toggle {
+        position: relative;
+        display: block;
+        width: 183px;
+        bottom: unset;
+        right: unset;
+
+        strong {
+          @include var.fontSize(2rem);
+          font-weight: 700;
+          color: black;
+        }
+      }
+    }
+
+    #menu-menu-principal {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: start;
+      gap: 2rem;
+      margin-top: 5em;
+
+      a {
+        @include var.fontSize(2rem);
+        color: var.$blue;
+        font-weight: 600;
+        text-decoration: none;
+      }
+    }
+
+    #close-burger {
+      position: absolute;
+      right: 2%;
+      top: -2%;
+      background: transparent;
+      border: none;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
+      path {
+        fill: var.$blue;
+      }
+    }
   }
 }
