--- a/src/sass/layouts/_footer.scss
+++ b/src/sass/layouts/_footer.scss
@@ -3,6 +3,10 @@
 footer {
   background: var.$blue;
 
+  a {
+    @include var.fontSize(19);
+  }
+
   h3 {
     color: white;
     margin-bottom: 1.5rem;
@@ -26,9 +30,44 @@ footer {
     @include var.fontSize(14);
     color: white;
 
+    @include var.breakpoint(tablet) {
+      grid-template-columns: repeat(2, 1fr);
+      column-gap: 4.2rem;
+      row-gap: 7.2rem;
+    }
+
+    @include var.breakpoint(mobile) {
+      grid-template-columns: 1fr;
+      width: 100%;
+    }
+
     a {
       color: white;
       text-decoration: none;
+    }
+  }
+
+  .produits {
+    h3 {
+      margin-bottom: 3.1rem;
+    }
+
+    ul {
+      display: flex;
+      flex-direction: column;
+      justify-content: start;
+      align-items: start;
+      gap: 5.2rem;
+    }
+
+    li {
+      background: white;
+      padding: 1.6rem;
+    }
+
+    a {
+      color: var.$blue;
+      font-weight: 600;
     }
   }
 
@@ -38,5 +77,53 @@ footer {
     justify-content: center;
     align-items: center;
     gap: 1.5rem;
+
+    ul {
+      display: flex;
+      list-style: none;
+      justify-content: center;
+      align-items: center;
+      gap: 3.6rem;
+    }
+
+    p,
+    p a {
+      @include var.fontSize(19);
+      color: white;
+      text-decoration: none;
+    }
+  }
+
+  .black-background {
+    background: black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-block: 1.8rem;
+
+    ul {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
+      @include var.breakpoint(mobile) {
+        flex-direction: column;
+      }
+
+      li:not(:last-child)::after {
+        content: "/";
+        color: white;
+        @include var.fontSize(19);
+        margin-inline: 0.5em;
+        font-weight: 400;
+      }
+
+      a {
+        color: white;
+        text-decoration: none;
+        @include var.fontSize(19);
+        font-weight: 400;
+      }
+    }
   }
 }
