--- a/src/sass/layouts/_header.scss
+++ b/src/sass/layouts/_header.scss
@@ -3,6 +3,22 @@
 header {
   width: 100%;
   border-bottom: 6px solid black;
+
+  .current_page_item {
+    position: relative;
+
+    &::after {
+      content: "";
+      background: url("../../public/active-link.svg");
+      width: 34.6px;
+      height: 13.59px;
+      position: absolute;
+      bottom: -75%;
+      left: 0;
+      right: 0;
+      margin-inline: auto;
+    }
+  }
 }
 
 .header-container {
@@ -41,7 +57,7 @@ header {
   @include var.breakpoint(tablet) {
     display: grid;
     grid-template-columns: 0.3fr 1fr 0.2fr;
-    gap: 1.5rem;
+    column-gap: 1.5rem;
     place-items: center;
     margin-left: 0;
     margin-right: 1.4rem;
@@ -60,6 +76,10 @@ header {
   @include var.breakpoint(650px) {
     grid-template-columns: 0.8fr 1fr 0.6fr;
   }
+
+  @include var.breakpoint(549px) {
+    grid-template-columns: 0.8fr 0.3fr 0.6fr;
+  }
 }
 
 #menu-menu-principal-1 {
@@ -69,7 +89,7 @@ header {
   gap: 6rem;
 
   a {
-    @include var.fontSize(2rem);
+    @include var.fontSize(20);
     color: var.$blue;
     text-decoration: none;
     transition: 0.3s ease-in-out;
@@ -106,14 +126,14 @@ header {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 2.6rem 1.6rem;
+    padding: 1.6rem 3.5rem;
     height: fit-content;
 
-    @include var.fontSize(2rem);
+    @include var.fontSize(20);
     font-weight: 700;
 
     span {
-      @include var.fontSize(1.4rem);
+      @include var.fontSize(14);
       font-weight: 300;
     }
 
@@ -137,9 +157,13 @@ header {
   justify-content: center;
   align-items: center;
   gap: 2.4rem;
+
+  @include var.breakpoint(428px) {
+    gap: 1.4rem;
+  }
 }
 
-#newsletter-toggle {
+.newsletter-toggle {
   position: fixed;
   bottom: 1%;
   right: 1%;
@@ -149,13 +173,16 @@ header {
   align-items: center;
   cursor: pointer;
   gap: 1.2rem;
+  pointer-events: all;
 
   img {
     width: 46px;
     height: 46px;
+    pointer-events: none;
   }
 
   p {
+    pointer-events: none;
     @include var.fontSize(1.7rem);
     text-align: center;
   }
@@ -163,7 +190,7 @@ header {
 
 .newsletter-container {
   @include var.breakpoint(tablet) {
-    #newsletter-toggle {
+    .newsletter-toggle {
       display: none;
     }
   }
@@ -192,6 +219,13 @@ header {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+
+    @include var.breakpoint(1000px) {
+      width: 650px;
+    }
+    @include var.breakpoint(mobile) {
+      width: 95%;
+    }
   }
 
   .hero-newsletter {
@@ -199,6 +233,58 @@ header {
     width: 100%;
     position: relative;
     padding-block: 3.6rem;
+  }
+
+  .newsletter-content {
+    padding-block: 5.3rem 9.1rem;
+    width: 84%;
+    margin-inline: auto;
+
+    form,
+    div {
+      width: 100%;
+    }
+
+    .email-area {
+      display: grid;
+      grid-template-columns: 1fr 0.3fr;
+      column-gap: 0.9rem;
+      row-gap: 1.1rem;
+
+      @include var.breakpoint(490px) {
+        grid-template-columns: 1fr;
+        place-items: center;
+
+        input {
+          height: 4.9rem;
+          width: 100%;
+
+          &[type="submit"] {
+            height: fit-content;
+          }
+        }
+      }
+    }
+
+    label {
+      grid-column: 1 / 3;
+      grid-row: 1;
+      font-size: 1.9rem;
+
+      @include var.breakpoint(490px) {
+        grid-column: 1;
+        text-align: center;
+      }
+    }
+
+    .btn {
+      background: black;
+      color: white;
+
+      @include var.breakpoint(490px) {
+        text-align: center;
+      }
+    }
   }
 
   h3 {
@@ -276,7 +362,7 @@ header {
       flex-direction: column;
       justify-content: start;
       align-items: center;
-      gap: 2rem;
+      gap: 3.4rem;
       width: 100%;
       height: 100%;
 
@@ -288,6 +374,13 @@ header {
         .external-link {
           display: flex;
         }
+
+        @include var.breakpoint(mobile) {
+          &,
+          & a {
+            width: 95%;
+          }
+        }
       }
 
       #newsletter-toggle {
@@ -298,7 +391,7 @@ header {
         right: unset;
 
         strong {
-          @include var.fontSize(2rem);
+          @include var.fontSize(20);
           font-weight: 700;
           color: black;
         }
@@ -314,10 +407,14 @@ header {
       margin-top: 5em;
 
       a {
-        @include var.fontSize(2rem);
+        @include var.fontSize(20);
         color: var.$blue;
         font-weight: 600;
         text-decoration: none;
+      }
+
+      @include var.breakpoint(mobile) {
+        gap: 3.4rem;
       }
     }
 
