--- a/src/sass/layouts/_single.scss
+++ b/src/sass/layouts/_single.scss
@@ -72,6 +72,20 @@
       grid-template-columns: repeat(4, 1fr);
       column-gap: 2rem;
       margin-top: 4rem;
+
+      img {
+        width: 100%;
+      }
+
+      @include var.breakpoint(tablet) {
+        grid-template-columns: repeat(2, 1fr);
+        column-gap: 3rem;
+        row-gap: 5.1rem;
+      }
+
+      @include var.breakpoint(mobile) {
+        grid-template-columns: 1fr;
+      }
     }
 
     ul {
