--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -40,3 +40,7 @@ h4 {
   font-size: calc(20px + (30 - 20) * ((100vw - 320px) / (1920 - 320)));
   font-weight: 700;
 }
+
+.gray-background {
+  background: var.$lightGray;
+}
