--- a/src/sass/layouts/_header.scss
+++ b/src/sass/layouts/_header.scss
@@ -383,7 +383,7 @@ header {
         }
       }
 
-      #newsletter-toggle {
+      .newsletter-toggle {
         position: relative;
         display: block;
         width: 183px;
