--- a/src/sass/layouts/_engagements.scss
+++ b/src/sass/layouts/_engagements.scss
@@ -17,6 +17,17 @@
         min-height: 416px;
       }
     }
+
+    @include var.breakpoint(mobile) {
+      flex-direction: column-reverse;
+      justify-content: start;
+      align-items: center;
+
+      img {
+        width: 100%;
+        max-width: 100%;
+      }
+    }
   }
 
   .hero-banner-content {
@@ -31,6 +42,12 @@
     @include var.breakpoint(tablet) {
       max-width: 40%;
       font-size: 1.6rem;
+    }
+
+    @include var.breakpoint(mobile) {
+      max-width: 95%;
+      margin-inline: auto;
+      margin-top: -5em;
     }
 
     h2 {
@@ -50,6 +67,10 @@
     h4 {
       font-size: calc(29px + (39 - 29) * ((100vw - 320px) / (1920 - 320)));
       margin-bottom: 2.6rem;
+
+      @include var.breakpoint(mobile) {
+        text-align: center;
+      }
     }
 
     .programme-content {
@@ -85,6 +106,11 @@
       justify-content: center;
       align-items: center;
       gap: 5.8rem;
+
+      @include var.breakpoint(mobile) {
+        flex-direction: column;
+        gap: 2rem;
+      }
     }
   }
 
@@ -95,6 +121,10 @@
 
     h2 {
       margin-bottom: 3.8rem;
+
+      @include var.breakpoint(mobile) {
+        text-align: center;
+      }
     }
 
     strong {
@@ -104,6 +134,14 @@
     img {
       position: relative;
       margin-left: -5%;
+
+      @include var.breakpoint(1054px) {
+        width: 25%;
+      }
+
+      @include var.breakpoint(mobile) {
+        display: none;
+      }
     }
   }
 
@@ -121,9 +159,23 @@
       width: 61%;
     }
 
+    @include var.breakpoint(1054px) {
+      width: 75%;
+    }
+
+    @include var.breakpoint(mobile) {
+      width: 100%;
+      height: fit-content;
+      padding-block: 3.9rem;
+    }
+
     div {
       margin-inline: auto;
       width: 57%;
+
+      @include var.breakpoint(mobile) {
+        width: 95%;
+      }
     }
 
     ul {
@@ -134,12 +186,21 @@
   .partners {
     display: flex;
     justify-content: start;
-    align-items: center;
+    align-items: start;
 
     @include var.breakpoint(tablet) {
       margin-bottom: 20.8rem;
       img {
         width: 60%;
+      }
+    }
+
+    @include var.breakpoint(mobile) {
+      margin-bottom: 0;
+      flex-direction: column;
+
+      img {
+        width: 100%;
       }
     }
   }
@@ -154,10 +215,20 @@
     align-items: center;
     position: relative;
     margin-left: -18%;
+    align-self: center;
 
     @include var.breakpoint(tablet) {
       top: 17rem;
       margin-left: -28%;
+    }
+
+    @include var.breakpoint(mobile) {
+      width: 98%;
+      margin-right: 0;
+      margin-left: 0;
+      align-self: end;
+      top: unset;
+      margin-top: -15em;
     }
 
     .content-container {
