--- a/src/sass/layouts/_identite.scss
+++ b/src/sass/layouts/_identite.scss
@@ -1,6 +1,7 @@
 @use "../abstracts" as var;
 
 #identite {
+  padding-bottom: 8.3rem;
   .hero-banner {
     margin-top: 5.6rem;
     .container-narrow {
@@ -54,7 +55,7 @@
     .background-gray {
       background: var.$lightGray;
       width: 100%;
-      height: 100%;
+      height: 78%;
       position: absolute;
       inset: 0;
       z-index: -1;
@@ -63,16 +64,50 @@
     .container-narrow {
       display: flex;
       justify-content: center;
-      align-items: center;
+      align-items: start;
       position: relative;
+      gap: 8.6rem;
+
+      img {
+        max-width: 50%;
+        position: relative;
+        z-index: 3;
+      }
+
+      .content {
+        font-size: calc(16px + (19 - 16) * ((100vw - 320px) / (1920 - 320)));
+        position: relative;
+        z-index: 1;
+        margin-top: 3em;
+      }
+
+      h2 {
+        margin-bottom: 2.5rem;
+      }
     }
 
     .blue-text {
       background: var.$blue;
       color: white;
       position: absolute;
-      bottom: 0;
-      right: 0;
+      bottom: -6em;
+      right: 1em;
+      z-index: 2;
+      padding: 4.8rem 7rem 8.8rem 11.9rem;
+      max-width: 55%;
+      font-size: calc(20px + (26 - 20) * ((100vw - 320px) / (1920 - 320)));
+      font-weight: 600;
+    }
+  }
+
+  article {
+    margin-top: 10rem;
+    font-size: calc(16px + (19 - 16) * ((100vw - 320px) / (1920 - 320)));
+
+    h3 {
+      font-size: calc(40px + (49 - 40) * ((100vw - 320px) / (1920 - 320)));
+      font-weight: 700;
+      margin-bottom: 2.6rem;
     }
   }
 }
