--- a/src/sass/layouts/_identite.scss
+++ b/src/sass/layouts/_identite.scss
@@ -12,16 +12,31 @@
       flex-direction: column;
       justify-content: center;
       gap: 5.2rem;
+
+      @include var.breakpoint(mobile) {
+        max-width: 100%;
+        width: 100%;
+      }
     }
 
     h1 {
       color: var.$blue;
       max-width: 75%;
       text-transform: uppercase;
+
+      @include var.breakpoint(mobile) {
+        width: 100%;
+        margin-left: 0.5em;
+      }
     }
 
     img {
       max-width: 55%;
+
+      @include var.breakpoint(mobile) {
+        max-width: 95%;
+        align-self: end;
+      }
     }
   }
 
@@ -30,6 +45,10 @@
     justify-content: start;
     align-items: center;
     position: relative;
+
+    @include var.breakpoint(mobile) {
+      flex-direction: column;
+    }
 
     .blue-content {
       margin-top: -6em;
@@ -49,6 +68,11 @@
       div {
         width: 42%;
         margin-left: 3em;
+
+        @include var.breakpoint(mobile) {
+          width: 100%;
+          margin-left: 1em;
+        }
       }
     }
 
@@ -66,12 +90,41 @@
         top: -16em;
         max-width: 29%;
       }
+
+      @include var.breakpoint(tablet) {
+        max-width: 45%;
+        right: 1em;
+        top: -25em;
+      }
+
+      @include var.breakpoint(1314px) {
+        max-width: 40%;
+      }
+
+      @include var.breakpoint(1189px) {
+        top: -20em;
+      }
+
+      @include var.breakpoint(1050px) {
+        top: -16em;
+      }
+
+      @include var.breakpoint(mobile) {
+        position: relative;
+        max-width: 100%;
+        right: unset;
+        top: -3em;
+      }
     }
   }
 
   .histoire {
     padding-block: 6.1rem;
     position: relative;
+
+    @include var.breakpoint(mobile) {
+      margin-top: -3em;
+    }
 
     .background-gray {
       background: var.$lightGray;
@@ -80,6 +133,10 @@
       position: absolute;
       inset: 0;
       z-index: -1;
+
+      @include var.breakpoint(tablet) {
+        height: 100%;
+      }
     }
 
     .container-narrow {
@@ -89,10 +146,38 @@
       position: relative;
       gap: 8.6rem;
 
+      @include var.breakpoint(1689px) {
+        max-width: 80%;
+      }
+
+      @include var.breakpoint(tablet) {
+        max-width: 95%;
+      }
+
+      @include var.breakpoint(963px) {
+        gap: 4.3rem;
+      }
+
+      @include var.breakpoint(mobile) {
+        flex-direction: column-reverse;
+        gap: 3.1rem;
+        justify-content: center;
+        align-items: center;
+      }
+
       img {
         max-width: 50%;
         position: relative;
         z-index: 3;
+
+        @include var.breakpoint(tablet) {
+          align-self: end;
+        }
+
+        @include var.breakpoint(mobile) {
+          align-self: center;
+          max-width: 100%;
+        }
       }
 
       .content {
@@ -100,6 +185,18 @@
         position: relative;
         z-index: 1;
         margin-top: 3em;
+
+        @include var.breakpoint(tablet) {
+          margin-top: 0;
+        }
+
+        @include var.breakpoint(913px) {
+          margin-bottom: 4em;
+        }
+
+        @include var.breakpoint(mobile) {
+          margin-bottom: 0;
+        }
       }
 
       h2 {
@@ -118,6 +215,63 @@
       max-width: 55%;
       font-size: calc(20px + (26 - 20) * ((100vw - 320px) / (1920 - 320)));
       font-weight: 600;
+
+      @include var.breakpoint(1699px) {
+        max-width: 60%;
+        right: -1em;
+      }
+
+      @include var.breakpoint(1467px) {
+        bottom: -9em;
+      }
+
+      @include var.breakpoint(1363px) {
+        bottom: -10em;
+      }
+
+      @include var.breakpoint(tablet) {
+        bottom: -13em;
+        right: 5em;
+      }
+
+      @include var.breakpoint(1078px) {
+        max-width: 85%;
+        bottom: -11em;
+      }
+
+      @include var.breakpoint(933px) {
+        bottom: -12.5em;
+      }
+
+      @include var.breakpoint(899px) {
+        max-width: 90%;
+        right: 0;
+        bottom: -11em;
+      }
+
+      @include var.breakpoint(858px) {
+        bottom: -13em;
+      }
+
+      @include var.breakpoint(mobile) {
+        right: 0;
+        left: 0;
+        margin-inline: auto;
+        bottom: -15em;
+      }
+
+      @include var.breakpoint(662px) {
+        max-width: 93%;
+        padding: 4.8rem 2.2rem 8.8rem 2.2rem;
+      }
+
+      @include var.breakpoint(460px) {
+        bottom: -18em;
+      }
+
+      @include var.breakpoint(333px) {
+        bottom: -21em;
+      }
     }
   }
 
@@ -125,10 +279,26 @@
     margin-top: 10rem;
     font-size: calc(16px + (19 - 16) * ((100vw - 320px) / (1920 - 320)));
 
+    @include var.breakpoint(tablet) {
+      margin-top: 25rem;
+    }
+
+    @include var.breakpoint(mobile) {
+      margin-top: 30rem;
+    }
+
+    @include var.breakpoint(429px) {
+      margin-top: 35rem;
+    }
+
     h3 {
       font-size: calc(40px + (49 - 40) * ((100vw - 320px) / (1920 - 320)));
       font-weight: 700;
       margin-bottom: 2.6rem;
+
+      @include var.breakpoint(mobile) {
+        text-align: center;
+      }
     }
   }
 }
