--- a/src/sass/layouts/_product.scss
+++ b/src/sass/layouts/_product.scss
@@ -8,6 +8,10 @@
     max-width: 69%;
     margin-inline: auto;
 
+    @include var.breakpoint(tablet) {
+      max-width: 95%;
+    }
+
     ul {
       display: flex;
       justify-content: start;
@@ -17,9 +21,19 @@
       color: var.$blue;
       list-style: none;
 
+      @include var.breakpoint(400px) {
+        flex-direction: column;
+        align-items: start;
+        justify-content: center;
+      }
+
       .divider {
         color: black;
         border-radius: 0;
+
+        @include var.breakpoint(400px) {
+          display: none;
+        }
       }
 
       a {
@@ -38,6 +52,14 @@
     display: grid;
     grid-template-columns: 0.8fr 1fr;
     gap: 8.2rem;
+
+    @include var.breakpoint(977px) {
+      grid-template-columns: 0.4fr 1fr;
+    }
+
+    @include var.breakpoint(mobile) {
+      grid-template-columns: 1fr;
+    }
 
     .galleries {
       display: flex;
@@ -156,11 +178,29 @@
       width: 67%;
       height: 100%;
       z-index: -1;
+
+      @include var.breakpoint(tablet) {
+        width: 85%;
+      }
+
+      @include var.breakpoint(932px) {
+        width: 95%;
+      }
     }
 
     iframe {
       width: 42%;
       min-height: 505px;
+
+      @include var.breakpoint(tablet) {
+        width: 85%;
+        height: 605px;
+      }
+
+      @include var.breakpoint(932px) {
+        width: 95%;
+        height: auto;
+      }
     }
   }
 
@@ -217,6 +257,10 @@
         box-shadow: 0px 3px 6px #00000029;
         background: white;
 
+        @include var.breakpoint(500px) {
+          font-size: 1.6rem;
+        }
+
         &:nth-of-type(odd) {
           background: #fafafa;
         }
@@ -257,6 +301,16 @@
     align-items: start;
     list-style: none;
 
+    @include var.breakpoint(tablet) {
+      grid-template-columns: repeat(2, 1fr);
+      column-gap: 2.5rem;
+    }
+
+    @include var.breakpoint(mobile) {
+      grid-template-columns: 1fr;
+      align-items: center;
+    }
+
     a {
       text-decoration: none;
     }
@@ -268,12 +322,20 @@
       align-items: start;
       width: 100%;
 
+      @include var.breakpoint(mobile) {
+        align-items: center;
+      }
+
       li {
         color: var.$blue;
         text-decoration: none;
         display: flex;
         justify-content: start;
         align-items: center;
+
+        @include var.breakpoint(mobile) {
+          align-items: center;
+        }
 
         a {
           color: var.$blue;
@@ -310,10 +372,26 @@
     justify-content: center;
     align-items: center;
 
+    &.hidden {
+      display: none;
+    }
+
+    #close-devis {
+      cursor: pointer;
+    }
+
     .devis {
       background: white;
       width: 48%;
       margin-inline: auto;
+
+      @include var.breakpoint(tablet) {
+        width: 75%;
+      }
+
+      @include var.breakpoint(974px) {
+        width: 95%;
+      }
     }
 
     .top {
@@ -329,6 +407,15 @@
         max-width: 43%;
         margin-inline: auto;
         text-align: center;
+
+        @include var.breakpoint(mobile) {
+          font-size: 2rem;
+          max-width: 95%;
+        }
+
+        @include var.breakpoint(372px) {
+          font-size: 1.8rem;
+        }
       }
 
       img {
@@ -346,6 +433,11 @@
       padding-block: 3.8rem 3.3rem;
       padding-inline: 2.9rem;
 
+      @include var.breakpoint(mobile) {
+        padding-inline: 1rem;
+        padding-block: 2rem 1rem;
+      }
+
       h3 {
         font-size: 2.4rem;
         font-weight: 600;
@@ -353,6 +445,15 @@
         text-align: center;
         margin-bottom: 2.6rem;
         display: flow-root;
+
+        @include var.breakpoint(mobile) {
+          font-size: 2rem;
+        }
+
+        @include var.breakpoint(372px) {
+          font-size: 1.8rem;
+          margin-bottom: 1.6rem;
+        }
       }
 
       .sib_signup_box_inside_4 {
@@ -362,11 +463,24 @@
         align-items: start;
         column-gap: 2.9rem;
         row-gap: 2.6rem;
+
+        @include var.breakpoint(tablet) {
+          column-gap: 1.5rem;
+          row-gap: 1.2rem;
+        }
+
+        @include var.breakpoint(mobile) {
+          grid-template-columns: 1fr;
+        }
       }
 
       input {
         font-size: 1.9rem;
         padding: 1rem;
+
+        @include var.breakpoint(mobile) {
+          font-size: 1.6rem;
+        }
       }
 
       label {
@@ -374,6 +488,10 @@
         flex-direction: column;
         width: 100%;
         font-size: 1.9rem;
+
+        @include var.breakpoint(mobile) {
+          font-size: 1.6rem;
+        }
       }
 
       label[for="terms"] {
@@ -381,6 +499,10 @@
         justify-content: center;
         align-items: start;
         grid-column: 1 / 3;
+
+        @include var.breakpoint(mobile) {
+          grid-column: 1;
+        }
 
         input {
           margin-top: 0.4em;
@@ -393,6 +515,10 @@
 
       label[for="informations"] {
         grid-column: 1 / 3;
+
+        @include var.breakpoint(mobile) {
+          grid-column: 1;
+        }
 
         textarea {
           width: 100%;
@@ -410,21 +536,26 @@
     }
   }
 
-  // #hidden {
-  //   position: absolute;
-  //   top: -100%;
-  //   left: -100%;
-  //   width: 0;
-  //   height: 0;
-  //   color: transparent;
-  //   background: transparent;
-  //   border: none;
-  //   outline: none;
-  // }
+  #hidden {
+    position: absolute;
+    top: -100%;
+    left: -100%;
+    width: 0;
+    height: 0;
+    color: transparent;
+    background: transparent;
+    border: none;
+    outline: none;
+  }
 
   .submit-container {
     grid-column: 1 / 3;
     justify-self: end;
+
+    @include var.breakpoint(mobile) {
+      grid-column: 1;
+      justify-self: center;
+    }
   }
 
   input[type="submit"] {
@@ -442,9 +573,39 @@
 .swiper {
   width: 534px;
   height: 534px;
+
+  @include var.breakpoint(977px) {
+    width: 300px;
+    height: 300px;
+  }
+
+  @include var.breakpoint(mobile) {
+    width: 534px;
+    height: 534px;
+  }
+
+  @include var.breakpoint(631px) {
+    width: 300px;
+    height: 300px;
+  }
 }
 
 .swiper-thumbs {
   height: 117px;
   width: 534px;
+
+  @include var.breakpoint(977px) {
+    width: 300px;
+    height: 59px;
+  }
+
+  @include var.breakpoint(768px) {
+    width: 534px;
+    height: 117px;
+  }
+
+  @include var.breakpoint(631px) {
+    width: 300px;
+    height: 59px;
+  }
 }
