--- a/src/sass/layouts/_boutique.scss
+++ b/src/sass/layouts/_boutique.scss
@@ -64,7 +64,12 @@
     width: 100%;
     border-left: 1px solid hsl(206 93% 34% / 0.5);
     padding-left: 1.75rem;
-    margin-bottom: 8rem;
+    margin-bottom: 6rem;
+
+    @include var.breakpoint(tablet) {
+      border-left: none;
+      padding-left: 0;
+    }
   }
 
   .products-container {
@@ -74,10 +79,22 @@
     grid-template-columns: repeat(3, 1fr);
     justify-items: center;
     place-items: start;
+
+    @include var.breakpoint(tablet) {
+      grid-template-columns: repeat(2, 1fr);
+    }
+
+    @include var.breakpoint(mobile) {
+      grid-template-columns: 1fr;
+    }
   }
 
   .product-container {
     width: 100%;
+
+    &.hidden {
+      display: none;
+    }
 
     .product-link {
       font-size: 1.9rem;
@@ -94,7 +111,7 @@
     .image-container {
       position: relative;
       width: 100%;
-      height: fit-content;
+      height: 318px;
     }
 
     .overlay {
@@ -119,6 +136,9 @@
 
     img {
       width: 100%;
+      height: 100%;
+      object-fit: cover;
+      object-position: center;
     }
 
     h3 {
@@ -152,6 +172,70 @@
     align-items: start;
     justify-items: start;
     margin-top: 3.6rem;
+    position: initial;
+
+    @include var.breakpoint(tablet) {
+      grid-template-columns: 1fr;
+    }
+  }
+
+  #show-filters {
+    display: none;
+    color: white;
+    font-size: 1.7rem;
+    font-weight: 600;
+    background: black;
+    margin-bottom: 2.6rem;
+
+    @include var.breakpoint(tablet) {
+      display: block;
+    }
+  }
+
+  .background-black {
+    img {
+      display: none;
+    }
+    @include var.breakpoint(tablet) {
+      position: fixed;
+      height: 100%;
+      width: 100%;
+      background: hsl(0 0 0 / 0.5);
+      z-index: 200;
+      top: 0;
+      left: 0;
+      transition: 0.5s ease-in-out;
+
+      .filtre-container {
+        background: white;
+        width: 51%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        padding-left: 5.6rem;
+        padding-top: 7.2rem;
+        position: relative;
+      }
+
+      &.hidden {
+        transform: translateX(-100%);
+      }
+
+      img {
+        display: block;
+        position: absolute;
+        top: 2%;
+        right: 5%;
+        width: 16px;
+        height: 16px;
+      }
+    }
+
+    @include var.breakpoint(mobile) {
+      .filtre-container {
+        width: 100%;
+      }
+    }
   }
 
   .filters-section {
@@ -180,7 +264,94 @@
 
     label {
       margin-bottom: 0.5em;
-      display: flow-root;
+      display: flex;
+      justify-content: start;
+      align-items: center;
+      gap: 0.3em;
+    }
+
+    input[type="checkbox"] {
+      appearance: none;
+      background: white;
+      margin: 0;
+      font: inherit;
+      color: var.$blue;
+      width: 15px;
+      height: 15px;
+      border: 0.11em solid black;
+      border-radius: 0.15em;
+      display: grid;
+      place-content: center;
+      place-items: center;
+
+      &::before {
+        content: "";
+        width: 9px;
+        height: 9px;
+        transform: scale(0);
+        transition: 120ms transform ease-in-out;
+        box-shadow: inset 1em 1em var.$blue;
+      }
+
+      &:checked::before {
+        transform: scale(1);
+      }
+    }
+  }
+
+  .marques {
+    margin-bottom: 6.5rem;
+    .container-narrow {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: start;
+    }
+
+    h2 {
+      margin-bottom: 1.2rem;
+
+      @include var.breakpoint(mobile) {
+        text-align: center;
+        margin-inline: auto;
+      }
+    }
+
+    .text {
+      margin-bottom: 8rem;
+      margin-left: 10rem;
+      font-size: 1.9rem;
+      font-weight: 400;
+
+      @include var.breakpoint(mobile) {
+        margin-left: 0;
+      }
+    }
+
+    .marques-container {
+      display: grid;
+      grid-template-columns: repeat(5, 1fr);
+      place-items: center;
+      column-gap: 5.4rem;
+      row-gap: 4.3rem;
+      list-style: none;
+      margin-inline: auto;
+
+      @include var.breakpoint(tablet) {
+        grid-template-columns: repeat(4, 1fr);
+      }
+
+      @include var.breakpoint(mobile) {
+        grid-template-columns: repeat(3, 1fr);
+      }
+
+      @include var.breakpoint(620px) {
+        grid-template-columns: repeat(2, 1fr);
+      }
+
+      @include var.breakpoint(500px) {
+        grid-template-columns: 1fr;
+      }
     }
   }
 }
