--- a/src/sass/layouts/_boutique.scss
+++ b/src/sass/layouts/_boutique.scss
@@ -256,6 +256,16 @@
       margin-left: 0.3em;
       font-weight: 600;
 
+      .category-title {
+        margin-top: 2rem;
+
+        strong {
+          margin-bottom: 0.3em;
+          font-size: 2rem;
+          font-weight: 700;
+        }
+      }
+
       .filters-categories__container {
         margin-left: 0.7em;
         font-weight: 400;
