--- a/src/sass/layouts/_boutique.scss
+++ b/src/sass/layouts/_boutique.scss
@@ -200,7 +200,7 @@
       position: fixed;
       height: 100%;
       width: 100%;
-      background: hsl(0 0 0 / 0.5);
+      background: hsl(0 0% 0% / 0.5);
       z-index: 200;
       top: 0;
       left: 0;
