--- a/src/sass/layouts/_boutique.scss
+++ b/src/sass/layouts/_boutique.scss
@@ -11,7 +11,7 @@
 
     .blue-content {
       position: absolute;
-      bottom: -31%;
+      bottom: -24%;
       left: 0;
       width: 95%;
       height: fit-content;
@@ -19,6 +19,12 @@
       color: white;
       font-size: 1.9rem;
       padding-block: 2.9rem;
+
+      @include var.breakpoint(mobile) {
+        width: 100%;
+        right: 0;
+        margin-inline: auto;
+      }
 
       h3 {
         font-size: 2.6rem;
@@ -30,11 +36,12 @@
     .txt {
       max-width: 73%;
       margin-inline: auto;
+      line-height: 1.3;
     }
   }
 
   #breadcrumbs {
-    margin-top: 18rem;
+    margin-top: 15rem;
     ul {
       display: flex;
       justify-content: start;
@@ -144,9 +151,13 @@
     h3 {
       font-size: 2rem;
       color: black;
-      line-height: 1;
+      line-height: 1.3;
       margin-block: 2.3rem 0.8rem;
       max-width: 98%;
+
+      @include var.breakpoint(tablet) {
+        line-height: 1.4;
+      }
     }
   }
 
@@ -176,6 +187,10 @@
 
     @include var.breakpoint(tablet) {
       grid-template-columns: 1fr;
+    }
+
+    @include var.breakpoint(mobile) {
+      max-width: 85%;
     }
   }
 
@@ -347,6 +362,10 @@
     row-gap: 4.3rem;
     list-style: none;
     margin-inline: auto;
+
+    li {
+      cursor: pointer;
+    }
 
     @include var.breakpoint(tablet) {
       grid-template-columns: repeat(4, 1fr);
