--- a/src/sass/layouts/_contact.scss
+++ b/src/sass/layouts/_contact.scss
@@ -35,7 +35,7 @@
     h3 {
       color: white;
 
-      @include var.breakpoint(mobile) {
+      @include var.breakpoint(tablet) {
         text-align: center;
       }
     }
@@ -238,7 +238,7 @@
         @include var.breakpoint(tablet) {
           width: 110%;
           left: -10%;
-          height: 155%;
+          height: 164%;
           bottom: unset;
           top: -40%;
         }
@@ -279,6 +279,7 @@
     h2 {
       color: var.$blue;
       margin-bottom: 2.5rem;
+      line-height: 1.3;
     }
 
     p {
