--- a/src/sass/layouts/_footer.scss
+++ b/src/sass/layouts/_footer.scss
@@ -27,7 +27,7 @@ footer {
     gap: 1.9rem;
     justify-items: start;
     align-items: start;
-    @include var.fontSize(14);
+    font-size: 1.9rem;
     color: white;
 
     @include var.breakpoint(tablet) {
@@ -47,6 +47,12 @@ footer {
     }
   }
 
+  .contact {
+    @include var.breakpoint(mobile) {
+      grid-row: 2;
+    }
+  }
+
   .produits {
     h3 {
       margin-bottom: 3.1rem;
@@ -57,7 +63,7 @@ footer {
       flex-direction: column;
       justify-content: start;
       align-items: start;
-      gap: 5.2rem;
+      gap: 2rem;
     }
 
     li {
@@ -84,6 +90,7 @@ footer {
       justify-content: center;
       align-items: center;
       gap: 3.6rem;
+      margin-block: 0;
     }
 
     p,
