--- a/src/sass/layouts/_front-page.scss
+++ b/src/sass/layouts/_front-page.scss
@@ -14,6 +14,7 @@
       flex-direction: column;
       justify-content: center;
       align-items: start;
+      margin-bottom: 6.1rem;
     }
 
     @include var.breakpoint(mobile) {
@@ -22,6 +23,7 @@
 
     .text {
       max-width: 60%;
+      line-height: 1.3;
 
       @include var.breakpoint(tablet) {
         max-width: 100%;
@@ -42,7 +44,7 @@
       }
 
       @include var.breakpoint(tablet) {
-        margin-top: 2.4rem;
+        margin-top: 3.4rem;
       }
     }
   }
@@ -80,6 +82,7 @@
     p,
     a {
       margin-left: 10.6rem;
+      line-height: 1.1;
 
       @include var.breakpoint(tablet) {
         margin-left: 6.8rem;
@@ -105,6 +108,15 @@
       &:hover {
         background: transparent;
         color: black;
+      }
+    }
+  }
+
+  .featured-news {
+    .post-content {
+      h4 {
+        line-height: 1.2;
+        margin-top: 0.4em;
       }
     }
   }
@@ -189,6 +201,10 @@
       margin-block: 2.3rem 0.8rem;
       font-size: 2rem;
       line-height: 1;
+
+      @include var.breakpoint(tablet) {
+        margin-block: 2.3rem 1.5rem;
+      }
     }
 
     .product-categories {
@@ -209,6 +225,10 @@
 
   .savoir-faire {
     margin-block: 7.1rem 2.7rem;
+
+    @include var.breakpoint(mobile) {
+      margin-block: 3.1rem 2.7rem;
+    }
     h2 {
       margin-bottom: 1.7rem;
     }
@@ -234,18 +254,13 @@
       p {
         font-size: 1.9rem;
         margin-top: 1.7rem;
+        line-height: 1.3;
       }
     }
 
     li {
       .img-top {
         width: 100%;
-      }
-
-      @include var.breakpoint(tablet) {
-        &:last-child {
-          grid-column: 1 / 3;
-        }
       }
     }
 
@@ -267,7 +282,7 @@
     .title {
       display: flex;
       align-items: center;
-      justify-content: center;
+      justify-content: start;
       gap: 2rem;
 
       font-size: 2.6rem;
@@ -307,10 +322,6 @@
       &:not(:last-child) {
         margin-bottom: 2rem;
       }
-
-      @include var.breakpoint(tablet) {
-        font-size: 1.6rem;
-      }
     }
 
     .btn {
@@ -319,6 +330,10 @@
       border: 1px solid white;
       transition: 0.3s ease-in-out;
       margin-top: 3rem;
+
+      @include var.breakpoint(tablet) {
+        margin-top: 3.5rem;
+      }
 
       &:hover {
         background: transparent;
@@ -331,6 +346,10 @@
     background: var.$lightGray;
     padding-block: 3.8rem 4.1rem;
     margin-bottom: 6.2rem;
+
+    @include var.breakpoint(mobile) {
+      padding-bottom: 4.8rem;
+    }
 
     .container-narrow {
       display: flex;
@@ -348,9 +367,11 @@
       margin-bottom: 2.5rem;
       max-width: 823px;
       font-size: 2.6rem;
+      line-height: 1.3;
 
       @include var.breakpoint(tablet) {
         font-size: 1.6rem;
+        margin-bottom: 3.5rem;
       }
 
       @include var.breakpoint(900px) {
@@ -364,6 +385,10 @@
       justify-content: center;
       align-items: center;
       gap: 1.8rem;
+
+      @include var.breakpoint(tablet) {
+        gap: 2.8rem;
+      }
     }
 
     .btn {
@@ -383,5 +408,9 @@
         font-size: 1.6rem;
       }
     }
+  }
+
+  .marques {
+    margin-bottom: 14.8rem;
   }
 }
