--- a/src/sass/layouts/_home.scss
+++ b/src/sass/layouts/_home.scss
@@ -7,6 +7,7 @@
   .content {
     margin-top: 3.4rem;
     margin-left: 6em;
+    font-size: 1.9rem;
 
     @include var.breakpoint(mobile) {
       margin-left: 0;
@@ -20,7 +21,7 @@
       display: flex;
       justify-content: start;
       align-items: center;
-      gap: 5.7rem;
+      gap: 2.5rem;
 
       @include var.breakpoint(mobile) {
         gap: 2rem;
@@ -84,6 +85,15 @@
     display: flex;
     flex-direction: column;
     gap: 0.7rem;
+
+    h4 {
+      font-size: 3rem;
+
+      @include var.breakpoint(mobile) {
+        font-size: 2rem;
+        margin-top: 1.5rem;
+      }
+    }
 
     div {
       font-size: 1.9rem;
