--- a/src/sass/layouts/_product.scss
+++ b/src/sass/layouts/_product.scss
@@ -355,16 +355,24 @@
     position: fixed;
     background: rgb(0 0 0 / 0.64);
     width: 100%;
-    height: 100%;
+    height: 100vh;
+    overflow-y: scroll;
     z-index: 2000;
     top: 0;
+    opacity: 1;
     left: 0;
     display: flex;
     justify-content: center;
     align-items: center;
 
     &.hidden {
-      display: none;
+      opacity: 0;
+      width: 0;
+      height: 0;
+
+      .devis {
+        display: none;
+      }
     }
 
     #close-devis {
@@ -372,7 +380,6 @@
     }
 
     .devis {
-      background: white;
       width: 48%;
       margin-inline: auto;
 
@@ -423,6 +430,7 @@
       align-items: center;
       padding-block: 3.8rem 3.3rem;
       padding-inline: 2.9rem;
+      background: white;
 
       @include var.breakpoint(mobile) {
         padding-inline: 1rem;
