--- a/src/sass/layouts/_single.scss
+++ b/src/sass/layouts/_single.scss
@@ -28,12 +28,15 @@
     align-items: start;
     font-size: 1.9rem;
 
+    .wp-block-image img {
+      height: auto !important;
+    }
     @include var.breakpoint(tablet) {
       width: 100%;
 
       .wp-block-image,
       .wp-block-image img {
-        width: 100%;
+        width: 100% !important;
       }
     }
   }
